Parity with Python similarity matrix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,9 @@ target_compile_options(armadillo PUBLIC -Wno-unused-parameter)
 # Spdlog logging library
 add_subdirectory(${PROJECT_SOURCE_DIR}/third_party/spdlog EXCLUDE_FROM_ALL)
 
-file(GLOB util_files util.cpp pileup_reader.cpp)
+file(GLOB util_files util.cpp pileup_reader.cpp logger.cpp)
 add_library(lib_util ${util_files})
+target_link_libraries(lib_util spdlog::spdlog)
 
 file(GLOB expectation_maximization_files expectation_maximization.cpp)
 add_library(lib_expectation_maximization ${expectation_maximization_files})
@@ -54,7 +55,7 @@ target_link_libraries(expectation_maximization lib_expectation_maximization lib_
 
 add_executable(svc svc_main.cpp)
 target_link_libraries(svc lib_expectation_maximization lib_variant_calling lib_similarity_matrix lib_util gflags
-    spdlog)
+    spdlog::spdlog)
 
 # TESTS
 enable_testing()
