First rough version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,11 @@ target_compile_options(armadillo PUBLIC -Wno-unused-parameter)
 # Spdlog logging library
 add_subdirectory(${PROJECT_SOURCE_DIR}/third_party/spdlog EXCLUDE_FROM_ALL)
 
+# BAMTools library for parsing BAM files
+include_directories(${PROJECT_SOURCE_DIR}/third_party/bamtools/src)
+add_subdirectory(${PROJECT_SOURCE_DIR}/third_party/bamtools EXCLUDE_FROM_ALL)
+
+
 file(GLOB util_files util.cpp pileup_reader.cpp logger.cpp)
 add_library(lib_util ${util_files})
 target_link_libraries(lib_util spdlog::spdlog)
@@ -60,7 +65,7 @@ target_link_libraries(lib_variant_calling lib_util)
 
 add_executable(svc svc_main.cpp)
 target_link_libraries(svc lib_expectation_maximization lib_variant_calling lib_similarity_matrix
-    lib_spectral_clustering lib_util gflags spdlog::spdlog)
+    lib_spectral_clustering lib_util gflags spdlog::spdlog BamTools)
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
   target_link_libraries(svc stdc++fs)
 endif()
