Add install targets for secedo and pileup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,3 +106,15 @@ gtest_discover_tests(tests)
 
 # copy the data into the binary directory, so that tests can reference it
 file(COPY tests/data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+install(
+    TARGETS pileup
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+
+install(
+    TARGETS secedo
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
